# exabind

./: .gitignore  Cargo.toml  README.md  effect_timeline. txt  exabind-web-3141764ebc61fbac.js  exabind-web-3141764ebc61fbac_bg.wasm  exabind-web-35cd637e908036d7.js  exabind-web-35cd637e908036d7_bg.wasm  exabind-web-664bc890569b89ae.js  exabind-web-664bc890569b89ae_bg.wasm  exabind-web-6cc6a4fd59e40ed0.js  exabind-web-6cc6a4fd59e40ed0_bg.wasm  exabind-web-6e76cdcbf1a06989.js  exabind-web-6e76cdcbf1a06989_bg.wasm  exabind-web-7a99b4fdb942af5a.js  exabind-web-7a99b4fdb942af5a_bg.wasm  exabind-web-8159df09b659b216.js  exabind-web-8159df09b659b216_bg.wasm  exabind-web-8deef5f1c89ae43e.js  exabind-web-8deef5f1c89ae43e_bg.wasm  exabind-web-b00f6247bf04e0f8.js  exabind-web-b00f6247bf04e0f8_bg.wasm  exabind-web-b076b6d7f63e5a9.js  exabind-web-b076b6d7f63e5a9_bg.wasm  exabind-web-cfe99464b5e8f834.js  exabind-web-cfe99464b5e8f834_bg.wasm  exabind-web-e45b6c2fd5d6a740.js  exabind-web-e45b6c2fd5d6a740_bg.wasm  exabind-web-ee9039c3176d9714.js  exabind-web-ee9039c3176d9714_bg.wasm  exabind-web-fea6c98072b9cb01.js  exabind-web-fea6c98072b9cb01_bg.wasm  index.html  key-press-fx.ansi  style-42bafbdadf707ae0.css
.github/workflows/: deploy-gh-pages.yml
core/: Cargo.toml
core/src/: app.rs  args.rs  color_cycle.rs  crossterm.rs  event_handler.rs  exabind_event.rs  input.rs  key_event.rs  lib.rs  shortcut.rs  stateful_widgets.rs  tui.rs  ui_state.rs
core/src/fx/: effect.rs  key_cap_outline.rs
core/src/parser/: kde.rs  mod.rs
core/src/widget/: keyboard.rs  mod.rs  shortcut_categories.rs  shortcuts.rs
src/: app.rs  args.rs  buffer.rs  color_cycle.rs  crossterm.rs  effect.rs  event_handler.rs  exabind_event.rs  input.rs  keymap.rs  main.rs  shortcut.rs  stateful_widgets.rs  tui.rs  ui_state.rs
src/fx/: effect.rs  effect_stage.rs  key_cap_outline.rs  mod.rs  unique.rs
src/parser/: core.rs  jetbrains.rs  kde.rs  mod.rs  xml.rs
src/styling/: Catpuccin.rs  catpuccin.rs  mod.rs  theme.rs
src/widget/: color_demo.rs  keyboard.rs  mod.rs  shortcut_categories.rs  shortcuts.rs  shortcuts_window.rs  theme.rs
test/: Eclipse copy.xml  kglobalshortcutsrc
tui/: Cargo.toml
tui/src/: app.rs  main.rs  tui.rs  ui_state.rs
tui/src/styling/: theme.rs
web/: Cargo.toml  Trunk.toml  bitmap_font.atlas  index.html  style.css
web/src/: main.rs
