[workspace]
members = [
    "core",
    "tui",
    "web",
]
resolver = "2"

[workspace.dependencies]
anpa = "0.10.0"
bit-set = "0.8.0"
bitflags = "2.4.1"
clap = { version = "4.5.21", features = ["derive"] }
console_error_panic_hook = "0.1"
crossterm = "0.28.1"
dirs = "5.0.1"
ratatui = { version = "0.29.0", default-features = false }
# ratzilla = { version = "0.2.0" }
# ratzilla = { path = "../ratzilla" }
ratzilla = { git = "https://github.com/junkdog/ratzilla", branch = "beamterm-latest" }
rectangle-pack = "0.4.2"
tachyonfx = { version = "0.19.0", default-features = false, features = ["std"] }
web-sys = "0.3"
web-time = "1.1"

[profile.release-optimized]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
