[package]
name = "exabind-core"
version = "0.1.0-dev"
edition = "2021"

[features]
default = []
crossterm = ["dep:crossterm"]

[dependencies]
anpa = "0.9.0"
bit-set = "0.8.0"
dirs = "5.0.1"
crossterm = { version = "0.28.1", optional = true }
clap = { version = "4.5.21", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tachyonfx = "0.15.0"
rectangle-pack = "0.4.2"
bitflags = "2.4.1"