[package]
name = "exabind-core"
version = "0.1.0-dev"
edition = "2021"

[features]
default = []
crossterm = ["dep:crossterm"]
web-time = ["dep:web-time"]

[dependencies]
anpa = "0.9.0"
bit-set = "0.8.0"
dirs = "5.0.1"
crossterm = { version = "0.28.1", optional = true }
clap = { version = "4.5.21", features = ["derive"] }
web-time = { version = "1.1", optional = true }
ratatui = { version = "0.29.0", default-features = false, features = ["unstable-widget-ref"] }
tachyonfx = { version = "0.15.0", default-features = false }
rectangle-pack = "0.4.2"
bitflags = "2.4.1"