[package]
name = "exabind-core"
version = "0.1.0-dev"
edition = "2021"

[features]
default = []
crossterm = ["dep:crossterm"]
web = ["dep:web-time", "dep:ratzilla"]

[dependencies]
anpa = { workspace = true }
bit-set = { workspace = true }
bitflags = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true, optional = true }
dirs = { workspace = true }
ratatui = { workspace = true, features = ["unstable-widget-ref"] }
ratzilla = { workspace = true, optional = true }
rectangle-pack = { workspace = true }
tachyonfx = { workspace = true, default-features = false }
web-time = { workspace = true, optional = true }
