[package]
name = "exabind"
version = "0.1.0-dev"
edition = "2021"

[[bin]]
name = "exabind"
path = "src/main.rs"

[dependencies]
bit-set = { workspace = true }
crossterm = { workspace = true }
exabind-core = { path = "../core", features = ["crossterm"] }
ratatui = { workspace = true, features = ["unstable-widget-ref", "crossterm"] }
rectangle-pack = { workspace = true }
tachyonfx = { workspace = true }