[package]
name = "exabind-web"
version = "0.1.0-dev"
edition = "2021"

[[bin]]
name = "exabind-web"
path = "src/main.rs"

[dependencies]
exabind-core = { path = "../core", features = ["web"] }
ratzilla = { git = "https://github.com/junkdog/ratzilla", branch = "beamterm-update-exabind" }
ratatui = { version = "0.29.0", default-features = false }
tachyonfx = { version = "0.16.0", default-features = false, features = ["web-time"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

