[package]
name = "exabind-web"
version = "0.1.0-dev"
edition = "2021"

[[bin]]
name = "exabind-web"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = { workspace = true }
exabind-core = { path = "../core", features = ["web"] }
ratatui = { workspace = true, features = ["unstable-widget-ref"] }
ratzilla = { workspace = true }
tachyonfx = { workspace = true, default-features = false, features = ["web-time"] }
web-sys = { workspace = true, features = ["console"] }

